# chameleon-chess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chameleon  chameleon.cbp  cmake_install.cmake  main.cpp  tournament.at
ChessEngine/: Board.h  BoardRep.h  BoardRepresentation.cpp  BoardRepresentation.h  Constants.h  Data.h  Debug.h  Engine.cpp  Engine.h  Evaluation.h  OpeningBookHandler.h  Search.h  TranspositionTable.h  Utility.h  board_representation.cpp  board_representation.h  debug.cpp  debug.h  display.cpp  display.h  evaluation.cpp  evaluation.h  position.cpp  position.h  search.cpp  search.h  uci.cpp  uci.h
src/: defs.h  eval.cpp  eval.h  position.cpp  position.h  search.cpp  search.h  uci.cpp  uci.h
